Add /external_activity/batch api design & tweak
