# design/external_activity.go
@@ -15,8 +15,19 @@ var _ = Service("ExternalActivity", func() {
 		Response("unauthorized", StatusUnauthorized)
 	})
 
-	Method("Fetch qiita article", func() {
-		Description("指定したユーザのQiitaの記事投稿を取得する")
+	Method("Refresh activities of external services", func() {
+		Description("セッションに紐づくユーザの連携済みサービスのアクティビティを取得する")
+
+		Payload(SessionTokenPayload)
+
+		HTTP(func() {
+			GET("/batch")
+			Response(StatusOK)
+		})
+	})
+
+	Method("Refresh qiita activity", func() {
+		Description("セッションに紐づくユーザのQiitaの記事投稿を取得する")
 
 		Payload(SessionTokenPayload)
 
@@ -27,7 +38,7 @@ var _ = Service("ExternalActivity", func() {
 	})
 
 	Method("Pick out past activity of qiita", func() {
-		Description("サービス連携以前のqiita記事投稿を反映させる")
+		Description("サービス連携時に連携以前のqiita記事投稿を全て反映させる")
 
 		Payload(SessionTokenPayload)
 
