# gen/http/openapi.yaml
@@ -240,13 +240,13 @@ paths:
       - http
       security:
       - jwt_header_Authorization: []
-  /v1/external_activity/qiita:
+  /v1/external_activity/batch:
     get:
       tags:
       - ExternalActivity
-      summary: Fetch qiita article ExternalActivity
-      description: 指定したユーザのQiitaの記事投稿を取得する
-      operationId: ExternalActivity#Fetch qiita article
+      summary: Refresh activities of external services ExternalActivity
+      description: セッションに紐づくユーザの連携済みサービスのアクティビティを取得する
+      operationId: ExternalActivity#Refresh activities of external services
       parameters:
       - name: Authorization
         in: header
@@ -259,7 +259,31 @@ paths:
         "401":
           description: Unauthorized response.
           schema:
-            $ref: '#/definitions/ExternalActivityFetchQiitaArticleUnauthorizedResponseBody'
+            $ref: '#/definitions/ExternalActivityRefreshActivitiesOfExternalServicesUnauthorizedResponseBody'
+      schemes:
+      - http
+      security:
+      - jwt_header_Authorization: []
+  /v1/external_activity/qiita:
+    get:
+      tags:
+      - ExternalActivity
+      summary: Refresh qiita activity ExternalActivity
+      description: セッションに紐づくユーザのQiitaの記事投稿を取得する
+      operationId: ExternalActivity#Refresh qiita activity
+      parameters:
+      - name: Authorization
+        in: header
+        description: JWT used for authentication
+        required: false
+        type: string
+      responses:
+        "200":
+          description: OK response.
+        "401":
+          description: Unauthorized response.
+          schema:
+            $ref: '#/definitions/ExternalActivityRefreshQiitaActivityUnauthorizedResponseBody'
       schemes:
       - http
       security:
@@ -269,7 +293,7 @@ paths:
       tags:
       - ExternalActivity
       summary: Pick out past activity of qiita ExternalActivity
-      description: サービス連携以前のqiita記事投稿を反映させる
+      description: サービス連携時に連携以前のqiita記事投稿を全て反映させる
       operationId: ExternalActivity#Pick out past activity of qiita
       parameters:
       - name: Authorization
@@ -520,12 +544,12 @@ definitions:
     title: AdminAdminCreateNewUserUnauthorizedResponseBody
     type: string
     description: Credentials are invalid
-    example: Culpa culpa vel.
+    example: Qui non nobis.
   AdminAdminDeleteUserUnauthorizedResponseBody:
     title: AdminAdminDeleteUserUnauthorizedResponseBody
     type: string
     description: Credentials are invalid
-    example: Veniam et.
+    example: Mollitia quo perspiciatis.
   AdminAdminGetUserResponseBody:
     title: 'Mediatype identifier: application/vnd.jeeek.user+json; view=default'
     type: object
@@ -579,7 +603,7 @@ definitions:
     title: AdminAdminGetUserUnauthorizedResponseBody
     type: string
     description: Credentials are invalid
-    example: Id itaque voluptatem.
+    example: Ab nulla.
   AdminAdminHealthCheckResponseBody:
     title: 'Mediatype identifier: application/vnd.jeeek.healthcheck+json; view=default'
     type: object
@@ -597,12 +621,12 @@ definitions:
     title: AdminAdminHealthCheckUnauthorizedResponseBody
     type: string
     description: Credentials are invalid
-    example: Dolores quas et quo.
+    example: Alias quod.
   AdminAdminListUserUnauthorizedResponseBody:
     title: AdminAdminListUserUnauthorizedResponseBody
     type: string
     description: Credentials are invalid
-    example: Est magnam pariatur.
+    example: Molestiae id itaque voluptatem.
   AdminAdminSigninRequestBody:
     title: AdminAdminSigninRequestBody
     type: object
@@ -631,7 +655,7 @@ definitions:
     title: AdminAdminSigninUnauthorizedResponseBody
     type: string
     description: Credentials are invalid
-    example: Ea quaerat.
+    example: Culpa vel deleniti ut sed.
   AdminAdminUpdateUserRequestBody:
     title: AdminAdminUpdateUserRequestBody
     type: object
@@ -667,7 +691,7 @@ definitions:
     example:
       disabled: false
       email_address: keisuke.honda+testuser@ynu.jp
-      email_verified: false
+      email_verified: true
       phone_number: "08079469367"
       photo_url: https://imageurl.com
       user_name: keisuke.honda
@@ -724,7 +748,7 @@ definitions:
     title: AdminAdminUpdateUserUnauthorizedResponseBody
     type: string
     description: Credentials are invalid
-    example: Velit cum dolorum qui non nobis.
+    example: Modi inventore.
   AdminJeeekUserResponseCollection:
     title: 'Mediatype identifier: application/vnd.jeeek.user+json; type=collection;
       view=default'
@@ -746,16 +770,21 @@ definitions:
       photo_url: https://imageurl.com
       user_id: XRQ85mtXnINISH25zfM0m5RlC6L2
       user_name: keisuke.honda
-  ExternalActivityFetchQiitaArticleUnauthorizedResponseBody:
-    title: ExternalActivityFetchQiitaArticleUnauthorizedResponseBody
-    type: string
-    description: Credentials are invalid
-    example: Nulla porro mollitia quo perspiciatis.
   ExternalActivityPickOutPastActivityOfQiitaUnauthorizedResponseBody:
     title: ExternalActivityPickOutPastActivityOfQiitaUnauthorizedResponseBody
     type: string
     description: Credentials are invalid
+    example: Voluptas est.
+  ExternalActivityRefreshActivitiesOfExternalServicesUnauthorizedResponseBody:
+    title: ExternalActivityRefreshActivitiesOfExternalServicesUnauthorizedResponseBody
+    type: string
+    description: Credentials are invalid
     example: Laboriosam est placeat asperiores.
+  ExternalActivityRefreshQiitaActivityUnauthorizedResponseBody:
+    title: ExternalActivityRefreshQiitaActivityUnauthorizedResponseBody
+    type: string
+    description: Credentials are invalid
+    example: Accusantium ut.
   JeeekUserResponse:
     title: 'Mediatype identifier: application/vnd.jeeek.user+json; view=default'
     type: object
@@ -768,7 +797,7 @@ definitions:
       email_verified:
         type: boolean
         description: ユーザーのプライマリ メールアドレスが確認されているかどうか
-        example: false
+        example: true
       phone_number:
         type: string
         description: ユーザのメインの電話番号
@@ -809,7 +838,7 @@ definitions:
     title: UserDeleteUserUnauthorizedResponseBody
     type: string
     description: Credentials are invalid
-    example: Enim consectetur a qui quia dicta.
+    example: Voluptas voluptas.
   UserGetCurrentUserResponseBody:
     title: 'Mediatype identifier: application/vnd.jeeek.user+json; view=default'
     type: object
@@ -847,7 +876,7 @@ definitions:
     description: Get Current UserResponseBody result type (default view)
     example:
       email_address: keisuke.honda+testuser@ynu.jp
-      email_verified: true
+      email_verified: false
       phone_number: "08079469367"
       photo_url: https://imageurl.com
       user_id: XRQ85mtXnINISH25zfM0m5RlC6L2
@@ -863,7 +892,7 @@ definitions:
     title: UserGetCurrentUserUnauthorizedResponseBody
     type: string
     description: Credentials are invalid
-    example: Et voluptas est est.
+    example: Id beatae eos.
   UserGetUserResponseBody:
     title: 'Mediatype identifier: application/vnd.jeeek.user+json; view=default'
     type: object
@@ -917,7 +946,7 @@ definitions:
     title: UserGetUserUnauthorizedResponseBody
     type: string
     description: Credentials are invalid
-    example: Omnis eaque consequatur rerum cum molestiae.
+    example: A qui quia dicta error quod sint.
   UserJeeekUserResponseCollection:
     title: 'Mediatype identifier: application/vnd.jeeek.user+json; type=collection;
       view=default'
@@ -939,11 +968,23 @@ definitions:
       photo_url: https://imageurl.com
       user_id: XRQ85mtXnINISH25zfM0m5RlC6L2
       user_name: keisuke.honda
+    - email_address: keisuke.honda+testuser@ynu.jp
+      email_verified: true
+      phone_number: "08079469367"
+      photo_url: https://imageurl.com
+      user_id: XRQ85mtXnINISH25zfM0m5RlC6L2
+      user_name: keisuke.honda
+    - email_address: keisuke.honda+testuser@ynu.jp
+      email_verified: true
+      phone_number: "08079469367"
+      photo_url: https://imageurl.com
+      user_id: XRQ85mtXnINISH25zfM0m5RlC6L2
+      user_name: keisuke.honda
   UserListUserUnauthorizedResponseBody:
     title: UserListUserUnauthorizedResponseBody
     type: string
     description: Credentials are invalid
-    example: Ut libero dignissimos.
+    example: Eaque consequatur rerum cum molestiae.
   UserUpdateUserRequestBody:
     title: UserUpdateUserRequestBody
     type: object
@@ -1026,7 +1067,7 @@ definitions:
     title: UserUpdateUserUnauthorizedResponseBody
     type: string
     description: Credentials are invalid
-    example: Beatae eos.
+    example: Libero dignissimos at eaque.
 securityDefinitions:
   jwt_header_Authorization:
     type: apiKey
